<resources>
    <string name="app_name">NewUI</string>
    <string name="current_bluetooth_status">Current Bluetooth Status</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="sport_mode">SPORT MODE</string>
    <string name="mode">Mode</string>
    <string name="telemetry">Telemetry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_rpm">Current RPM:</string>
    <string name="current_fuel">Current Fuel:</string>
    <string name="adc">ADC:</string>
    <string name="current_mode">Current Mode:</string>
    <string name="displaycurrentmode">displayCurrentMode</string>
    <string name="afr">AFR:</string>
    <string name="n_a">N/A</string>
    <string name="volt">Volt</string>
    <string name="fuel">Fuel:</string>
    <string name="rpm">RPM:</string>
    <string name="freq">Freq:</string>
</resources>