<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/trip_banner_background_rounded"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textBluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/current_bluetooth_status"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/linearHeader"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <LinearLayout
            android:id="@+id/linearHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBluetoothStatus">

            <Button
                android:id="@+id/connectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/connect"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/disconnect"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutBanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/banner"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/defaultButton"
                app:layout_constraintStart_toStartOf="@+id/ecoButton"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/current_mode"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/displayCurrentMode"
                    app:layout_constraintStart_toStartOf="@id/textAfr"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/displayCurrentMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/displaycurrentmode"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/textCurrent"
                    app:layout_constraintTop_toBottomOf="@+id/textCurrent"
                    app:layout_constraintBottom_toBottomOf="@id/motorcycle"/>

                <ImageView
                    android:id="@+id/motorcycle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_motorcycle"
                    app:layout_constraintBottom_toTopOf="@id/textAfr"
                    app:layout_constraintEnd_toEndOf="@id/percentSymbol"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/textAfr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afr"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/textFreq"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textAfrValue" />

                <TextView
                    android:id="@+id/textAfrValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textAfr"
                    app:layout_constraintStart_toStartOf="@id/textAfr"
                    app:layout_constraintEnd_toEndOf="@id/textAfr"/>

                <TextView
                    android:id="@+id/textFreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freq"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/textAfr"
                    app:layout_constraintEnd_toStartOf="@id/textRpm"
                    app:layout_constraintTop_toTopOf="@id/textAfr" />

                <TextView
                    android:id="@+id/textFreqValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textFreq"
                    app:layout_constraintStart_toStartOf="@id/textFreq"
                    app:layout_constraintEnd_toStartOf="@id/hzSymbol"/>

                <TextView
                    android:id="@+id/hzSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hz"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintTop_toBottomOf="@id/textFreq"
                    app:layout_constraintStart_toEndOf="@id/textFreqValue"
                    app:layout_constraintEnd_toEndOf="@id/textFreq"/>

                <TextView
                    android:id="@+id/textRpm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rpm"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/textAdc"
                    app:layout_constraintStart_toEndOf="@id/textFreq"
                    app:layout_constraintTop_toTopOf="@id/textAfr" />

                <TextView
                    android:id="@+id/textRpmValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textRpm"
                    app:layout_constraintStart_toStartOf="@id/textRpm"
                    app:layout_constraintEnd_toEndOf="@id/textRpm"/>

                <TextView
                    android:id="@+id/textAdc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adc"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/textFuel"
                    app:layout_constraintStart_toEndOf="@id/textRpm"
                    app:layout_constraintTop_toTopOf="@id/textAfr" />

                <TextView
                    android:id="@+id/textAdcValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textAdc"
                    app:layout_constraintStart_toStartOf="@id/textAdc"
                    app:layout_constraintEnd_toEndOf="@id/textAdc"/>

                <TextView
                    android:id="@+id/textFuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textAdc"
                    app:layout_constraintTop_toTopOf="@id/textAfr" />

                <TextView
                    android:id="@+id/textFuelValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textFuel"
                    app:layout_constraintStart_toStartOf="@id/textFuel"
                    app:layout_constraintEnd_toStartOf="@id/percentSymbol"/>

                <TextView
                    android:id="@+id/percentSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textFuel"
                    app:layout_constraintStart_toEndOf="@id/textFuelValue"
                    app:layout_constraintEnd_toEndOf="@id/textFuel"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ecoButton"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/eco_background"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toStartOf="@+id/sportButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutBanner"
                android:focusable="true">

                <ImageView
                    android:id="@+id/ecoView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_eco"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Eco"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sportButton"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/sport_background"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toEndOf="@+id/ecoButton"
                app:layout_constraintEnd_toStartOf="@id/defaultButton"
                app:layout_constraintTop_toBottomOf="@id/layoutBanner" >

                <ImageView
                    android:id="@+id/sportView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_turbo"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Sport"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/defaultButton"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@drawable/default_background"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toEndOf="@+id/sportButton"
                app:layout_constraintTop_toBottomOf="@+id/layoutBanner"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/defaultView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_default"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Default"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomNavigationMenu"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/primary"-->
<!--        app:itemIconSize="30dp"-->
<!--        app:menu="@menu/navigation_menu"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->

<!--    <View-->
<!--        android:id="@+id/divider"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:backgroundTint="@color/color_bg"-->
<!--        app:layout_constraintBottom_toTopOf="@id/bottomNavigationMenu"/>-->

